generate_data/jitfailure-dolfin_expression_b991e044bbe3f9d584c98e29a85988c0/error.log
In file included from /usr/local/include/boost/config/header_deprecated.hpp:18,
                 from /usr/local/include/boost/core/swap.hpp:19,
                 from /usr/local/include/boost/optional/optional.hpp:33,
                 from /usr/local/include/boost/optional.hpp:15,
                 from /usr/local/include/dolfin/parameter/Parameters.h:24,
                 from /usr/local/include/dolfin/common/Variable.h:28,
                 from /usr/local/include/dolfin/function/GenericFunction.h:30,
                 from /usr/local/include/dolfin/function/Expression.h:28,
                 from /tmp/tmplmoxubrb/dolfin_expression_b991e044bbe3f9d584c98e29a85988c0.cpp:13:
/usr/local/include/boost/core/swap.hpp:26:1: note: ‘#pragma message: This header is deprecated. Use boost/core/invoke_swap.hpp instead.’
   26 | BOOST_HEADER_DEPRECATED("boost/core/invoke_swap.hpp")
      | ^~~~~~~~~~~~~~~~~~~~~~~
/tmp/tmplmoxubrb/dolfin_expression_b991e044bbe3f9d584c98e29a85988c0.cpp: In member function ‘virtual void dolfin::dolfin_expression_b991e044bbe3f9d584c98e29a85988c0::eval(Eigen::Ref<Eigen::Matrix<double, -1, 1> >, Eigen::Ref<const Eigen::Matrix<double, -1, 1> >) const’:
/tmp/tmplmoxubrb/dolfin_expression_b991e044bbe3f9d584c98e29a85988c0.cpp:61:40: error: expression cannot be used as a function
   61 |           values[0] = 4 * 0.001 * x[1] (7.499999999999999e-06 - x[1]) / (5.624999999999999e-11);
      |                                   ~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
